# Linear-Genetic-Programming-Cuda

./: CMakeLists.txt  README.md
src/: CudaBuffer.hpp  CudaGLInterop.cpp  CudaGLInterop.hpp  CudaHelpers.hpp  LGP.cu  ReferenceFunctionData.cpp  ReferenceFunctionData.hpp
